@@ -169,7 +169,7 @@ hal_arbitration_isr_sci(CYG_ADDRWORD vector, CYG_ADDRWORD data)
 	HAL_READ_UINT16(CYGARC_REG_IMM_SC1SR, scc_sr);
 	HAL_READ_UINT16(CYGARC_REG_IMM_SCC1R1, scc_cr);
 	if ((scc_sr & CYGARC_REG_IMM_SCxSR_RDRF) && (scc_cr & CYGARC_REG_IMM_SCCxR1_RIE)) {
-	    isr_ret = hal_call_isr(CYGNUM_HAL_INTERRUPT_IMB3_SCI0_RX);
+	    isr_ret = hal_call_isr(CYGNUM_HAL_INTERRUPT_IMB3_SCI1_RX);
 #ifdef CYGIMP_HAL_COMMON_INTERRUPTS_CHAIN
         if (isr_ret & CYG_ISR_HANDLED)
 #endif
@@ -179,7 +179,7 @@ hal_arbitration_isr_sci(CYG_ADDRWORD vector, CYG_ADDRWORD data)
 	HAL_READ_UINT16(CYGARC_REG_IMM_SC2SR, scc_sr);
 	HAL_READ_UINT16(CYGARC_REG_IMM_SCC2R1, scc_cr);
 	if ((scc_sr & CYGARC_REG_IMM_SCxSR_RDRF) && (scc_cr & CYGARC_REG_IMM_SCCxR1_RIE)) {
-	    isr_ret = hal_call_isr(CYGNUM_HAL_INTERRUPT_IMB3_SCI1_RX);
+	    isr_ret = hal_call_isr(CYGNUM_HAL_INTERRUPT_IMB3_SCI2_RX);
 #ifdef CYGIMP_HAL_COMMON_INTERRUPTS_CHAIN
         if (isr_ret & CYG_ISR_HANDLED)
 #endif
@@ -386,8 +386,8 @@ hal_variant_IRQ_init(void)
   sci_arbiter.arbiter = hal_arbitration_isr_sci;
 
   hal_mpc5xx_install_arbitration_isr(&sci_arbiter);
-  HAL_INTERRUPT_SET_LEVEL(CYGNUM_HAL_INTERRUPT_IMB3_SCI0_RX, CYGNUM_HAL_ISR_SOURCE_PRIORITY_QSCI);	
-  HAL_INTERRUPT_SET_LEVEL(CYGNUM_HAL_INTERRUPT_IMB3_SCI0_RX, CYGNUM_HAL_ISR_SOURCE_PRIORITY_QSCI);	
+  HAL_INTERRUPT_SET_LEVEL(CYGNUM_HAL_INTERRUPT_IMB3_SCI1_RX, CYGNUM_HAL_ISR_SOURCE_PRIORITY_QSCI);	
+  HAL_INTERRUPT_SET_LEVEL(CYGNUM_HAL_INTERRUPT_IMB3_SCI2_RX, CYGNUM_HAL_ISR_SOURCE_PRIORITY_QSCI);	
 #endif
 }
 
